# pinns-jax

./: .gitignore  .pylintrc  README.md  environment-cpu.yaml  environment-gpu.yaml  environment.yaml  new2.py  new3.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  setup.py  setup_mcp.zsh  setup_mcp_server.sh  setup_mcp_server_python.sh
examples/ac/: train.py
examples/ac/configs/: config.yaml
examples/burgers_continuous_forward/: train.py
examples/burgers_continuous_forward/configs/: config.yaml
examples/burgers_continuous_inverse/: train.py
examples/burgers_continuous_inverse/configs/: config.yaml
examples/burgers_discrete_forward/configs/: config.yaml
examples/burgers_discrete_inverse/configs/: config.yaml
examples/kdv/configs/: config.yaml
mcp_server/: README.md  package.json  tsconfig.json
mcp_server/src/: index.ts
mcp_server/src/prompts/: index.ts
mcp_server/src/resources/: index.ts
mcp_server/src/tools/: index.ts
mcp_server_python/: README.md  pyproject.toml
mcp_server_python/src/pinnsjax_mcp_server/: server.py
pinnsjax/: __init__.py  train.py
pinnsjax/conf/: __init__.py  train.yaml
pinnsjax/data/: __init__.py  pinn_datamodule.py
pinnsjax/data/domains/: point_cloud.py  spatial.py  time.py
pinnsjax/data/mesh/: mesh.py
pinnsjax/data/sampler/: boundary_condition.py  initial_condition.py  mesh_sampler.py  sampler_base.py
pinnsjax/models/: __init__.py
pinnsjax/models/net/: neural_net.py
pinnsjax/models/runge_kutta/: runge_kutta.py
pinnsjax/trainer/: trainer.py
pinnsjax/utils/: __init__.py  gradient.py  module_fn.py  plotting.py  pylogger.py  rich_utils.py  utils.py
pinnsjax_mcp_server/: __init__.py  server.py  start_server.py
tutorials/: 0-Burgers.ipynb
