# 构建系统配置, 告诉pip如何构建你的包
# 对于发布包到PyPI是必须的
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 项目基本信息
[project]
name = "pinnsjax"
version = "0.1.0"
description = "Physics-Informed Neural Networks with JAX"
authors = [
    {name = "Ziven Zhong", email = "ZY.Zhong@outlook.com"}
]
requires-python = ">=3.10"

# 项目依赖包列表
dependencies = [
    "jax[cpu]>=0.4.20,<0.5.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "mcp>=1.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "scipy>=1.7.0",
    "requests>=2.25.0",
    "rich>=10.0.0",
    "rootutils>=1.0.0",
    "optax>=0.1.0",
    "flax>=0.6.0",
    "tqdm>=4.60.0",
    "pyDOE>=0.3.8",
]

# MCP服务器入口点配置
[project.scripts]
pinnsjax-mcp-server = "pinnsjax_mcp_server.server:main"

# 包查找配置 - 指定要包含的模块
[tool.setuptools.packages.find]
include = ["pinnsjax", "pinnsjax.*", "pinnsjax_mcp_server", "pinnsjax_mcp_server.*"]
exclude = ["tests*", "examples*", "tutorials*", "data*"]

# 包数据文件配置
[tool.setuptools.package-data]
pinnsjax = ["conf/**/*.yaml"]
