[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinnsjax-mcp-server"
version = "0.1.0"
description = "MCP Server for PINNs-JAX: Physics-Informed Neural Networks with JAX"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.2.0",
    "jax",
    "jaxlib", 
    "hydra-core",
    "omegaconf",
    "numpy",
    "matplotlib",
    "pyyaml",
]
requires-python = ">=3.8"

[project.scripts]
pinnsjax-mcp-server = "pinnsjax_mcp_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"] 